Bug 167745 - Does not exit when composer was open
Summary: Does not exit when composer was open
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.10.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-30 15:22 UTC by Peter Paulsen
Modified: 2008-08-04 22:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Paulsen 2008-07-30 15:22:48 UTC
Version:            (using KDE 4.1.0)
Installed from:    Debian testing/unstable Packages

At least I suppose it is a crash...

Since KDE 4.1.00 it isn't possible to start kmail or kontact again after I have closed it. I have to leave KDE and log in again to be able to start kmail or kontact again. Trying to start it again from console after quitting it gives no output at all, it just does not start.
Comment 1 Dominik Tritscher 2008-07-30 16:12:56 UTC
I can confirm that behaviour with KDE4.1 from Kubuntu packages. This only occurs if i run KMail seperately (not within kontact).
"ps aux" clearly shows that kmail is running, but neither the window nor the systray icon is shown.
Comment 2 George Kiagiadakis 2008-07-31 18:26:51 UTC
I can't reproduce this. I am using KDE 4.1 on debian too, but although kmail does not quit correctly as Dominik said due to bug 167826, I can start it again just fine. It just reopens the main window in the same kmail instance that did not previously quit. So, this is probably something else in combination with bug 167826.

PS: and kontact works fine for me. Unlike kmail, that quits too...
Comment 3 Ritesh Raj Sarraf 2008-07-31 20:27:37 UTC
I too am using Debian with KDE 4.1 and neither kmail nor kontact works for me.
One KDE startup, kmail autostarts. Then I quit kmail. But the kmail process never dies.

And then kontact can start, but I cannot open the kmail module in the kontact shell. It will always open externally.

Only option left is to exit both kmail and kontact, and then manually pkill the kmail pid and then start kontact.
Comment 4 George Kiagiadakis 2008-07-31 20:40:43 UTC
This behavior that Ritesh describes is confirmed here. This is due to bug 167826. The original description by the reporter is still different though.
Comment 5 Thomas McGuire 2008-08-01 19:41:09 UTC
Ok, confirmed. This only happens when the composer was open.
It is a kdelibs bug, and I've sent a mail to k-c-d with a patch which fixes it. Should be committed soon if there is nothing wrong with the patch.
Comment 6 Janet 2008-08-03 22:20:21 UTC
Re #5: I don't agree. It does not only happen, when the composer was open. I don't have the problem with kmail, even when the composer was used. KMail always starts. Except when I use kontact.

It doesn't matter what I do - once I have startet kontact I have to do a "killall kontact" to be able to use kmail or kontact again (even if I just opened kontact and immediately close it).
Comment 7 Thomas McGuire 2008-08-04 21:28:47 UTC
SVN commit 842134 by tmcguire:

Make sure KGlobal::deref() is always called, even when s subclass overrides
closeEvent().

This fixes KMail not exiting when, for example, the composer was opened.

BUG: 167745


 M  +4 -8      kmainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842134
Comment 8 Thomas McGuire 2008-08-04 22:30:25 UTC
SVN commit 842176 by tmcguire:

Backport r842134 by tmcguire to the 4.1 branch:

Make sure KGlobal::deref() is always called, even when s subclass overrides
closeEvent().

This fixes KMail not exiting when, for example, the composer was opened.

CCBUG: 167745



 M  +1 -4      kmainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=842176