Make sure KGlobal::deref() is always called, even when s subclass overrides closeEvent().

This fixes KMail not exiting when, for example, the composer was opened.

BUG: 167745

svn path=/trunk/KDE/kdelibs/; revision=842134